# pwcproject

./: README.md  data_analyst.db  main.py  pyproject.toml
Task2/project_planning/: development_plan.md
Task2/technical_design/: tech_design.md
src/pwcproject/: __init__.py  api.py  config.py  database.py  llm.py  models.py  streamlit_app.py  workflow.py
